--- a/src/pages/Feed/styles.css
+++ b/src/pages/Feed/styles.css
@@ -3,8 +3,8 @@ ul.post-list{
     list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    margin-bottom: 30px;
+    grid-gap: 100px;
+    margin-bottom: 100px;
 }
 
 ul.post-list li{
@@ -12,9 +12,96 @@ ul.post-list li{
     flex-direction: column;
 }
 
-ul.post-list li header{
-    width: 300%;
-    height: 320px;
+ul.post-list header {
+    width: 100%;
+    height: 120px;
     background-size: cover;
     border-radius: 4px;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.cardPost img {
+    width: 250px;
+}
+
+.feed {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.btn {
+    margin-top: 25px;
+    border: 0;
+    border-radius: 2px;
+    width: 20%;
+    height: 42px;
+    padding: 0 20px;
+    font-size: 16px;
+    font-weight: bold;
+    background: #f05a5b;
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: #e14f50;
+}
+
+.button-feed {
+    margin-top: 25px;
+    margin: 20px;
+    border: 0;
+    border-radius: 2px;
+    width: 50%;
+    height: 42px;
+    padding: 0 20px;
+    font-size: 16px;
+    font-weight: bold;
+    background: #f05a5b;
+    color: #fff;
+    cursor: pointer;
+}
+
+.button-feed:hover {
+    background: #e14f50;
+}
+
+.Link{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration-line: none;
+}
+
+header#main-header {
+    width: 100%;
+    height: 60px;
+    background: #f5f5f5;
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cardPost {
+    width: 400px;
+    min-height: 400px;
+    background-color: #f5f5f5;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
