--- a/src/pages/User/styles.css
+++ b/src/pages/User/styles.css
@@ -1,31 +1,3 @@
-label#imagem{
-    margin-bottom: 20px;
-    border: 1px dashed #ddd;
-    background-size: cover;
-    cursor: pointer;
-    height: 160px;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-label#imagem input{
-    display: none;
-}
-
-.imgCamera{
-    width: 20px;
-}
-
-label#imagem.has-imagem{
-    border: 0;
-}
-
-label#imagem.has-imagem img{
-    display: none;
-}
-
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 * {
     margin: 0;
@@ -47,7 +19,7 @@ body,input,button{
     font-size: 14px;
 }
 
-.new{
+.user{
     margin: 80px auto;
     max-width: 450px;
     width: 100%;
@@ -60,7 +32,7 @@ body,input,button{
     width: 160px;
 }
 
-.new{
+.user{
     width: 100%;
     background: #f5f5f5;
     margin-top: 50px;
@@ -68,20 +40,20 @@ body,input,button{
     padding: 30px;
 }
 
-.new form {
+.user form {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.new form label {
+.user form label {
     font-size: 14px;
     color: #444;
     font-weight: bold;
     margin-bottom: 8px;
 }
 
-.new form input {
+.user form input {
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 2px;
@@ -90,7 +62,7 @@ body,input,button{
     font-size: 16px;
 }
 
-.new button.btn {
+.user button.btn {
     border: 0;
     border-radius: 2px;
     width: 100%;
@@ -103,11 +75,11 @@ body,input,button{
     cursor: pointer;
 }
 
-.new button.btn:hover {
+.user button.btn:hover {
     background: #e14f50;
 }
 
-.new-center {
+.user-center {
     display: flex;
     justify-content: center;
 }
